Adicionando link para os módulos

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 <body>
 <h1>Home</h1>
 <ul>
-	<li>
-		<a href="Biblioteca">Biblioteca</a>
-	</li>
+	<li><a href="Biblioteca">Biblioteca</a></li>
+	<li><a href="Cantina">Cantina</a></li>
+	<li><a href="Cardapio">Cardapio</a></li>
+	<li><a href="Estacionamento">Estacionamento</a></li>
+	<li><a href="HisoricoEscolar">HisoricoEscolar</a></li>
+	<li><a href="Patrimonio">Patrimonio</a></li>
+	<li><a href="PortalAluno">PortalAluno</a></li>
+	<li><a href="Professores">Professores</a></li>
 </ul>
 </body>
 </html>
