Adicionando status para os links

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<li><a href="Cantina">Cantina</a></li>
 	<li><a href="Cardapio">Cardapio</a></li>
 	<li><a href="Estacionamento">Estacionamento</a></li>
-	<li><a href="HisoricoEscolar">HisoricoEscolar</a></li>
-	<li><a href="Patrimonio">Patrimonio</a></li>
-	<li><a href="PortalAluno">PortalAluno</a></li>
+	<li><a href="HistoricoEscolar">HistoricoEscolar (OK)</a></li>
+	<li><a href="Patrimonio">Patrimonio (OK)</a></li>
+	<li><a href="PortalAluno">PortalAluno (OK)</a></li>
 	<li><a href="Professores">Professores</a></li>
 </ul>
 </body>
