--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav" data-0="margin-top:20px;" data-300="margin-top:5px;">
 				
-						<li><a href="/modulos/biblioteca">Biblioteca</a></li><li><a href="#section-about">Cantina</a></li>
-						<li><a href="/modulos/estacionamento">Estacionamento</a></li>
-						<li><a href="/modulos/historico">Histórico</a></li>
-						<li><a href="/modulos/patrimonio">Patrimônio</a></li>
-						<li><a href="/modulos/portal">Portal</a></li>
-						<li><a href="/modulos/professores">Professores</a></li>
+						<li><a href="/modulos/Biblioteca">Biblioteca</a></li>
+						<li><a href="/modulos/Cantina">Cantina</a></li>
+						<li><a href="/modulos/Estacionamento">Estacionamento</a></li>
+						<li><a href="/modulos/HistoricoEscolar">Histórico</a></li>
+						<li><a href="/modulos/Patrimonio">Patrimônio</a></li>
+						<li><a href="/modulos/PortalAluno">Portal</a></li>
+						<li><a href="/modulos/Professores">Professores</a></li>
 					</ul>
 				</div><!--/.navbar-collapse -->
 			</div>
