--- a/modulos/Patrimonio/consulta.html
+++ b/modulos/Patrimonio/consulta.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link href="../Componentes/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="../Componentes/datatables/dataTables.bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="../css/estilo.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="../Componentes/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="../Componentes/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../Componentes/datatables/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="../Componentes/datatables/dataTables.bootstrap.js"></script>
-    <script type="text/javascript" src="../js/util.js"></script>
+    <link href="/Componentes/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/Componentes/datatables/dataTables.bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="/css/estilo.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="/Componentes/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="/Componentes/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/Componentes/datatables/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="/Componentes/datatables/dataTables.bootstrap.js"></script>
+    <script type="text/javascript" src="/js/util.js"></script>
     <script type="text/javascript" src="funcoes.js"></script>
   </head>
   
